unpackaged/main/default/objects/CMPL123CME__Investigation__c/CMPL123CME__Investigation__c.object-meta.xml
<CustomObject>
    <description>INVESTIGATION AND ROOT CAUSE INFORMATION</description>
    <label>Investigation/Evaluation</label>
    <nameField>
        <label>Investigation/Evaluation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investigations/Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>