unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Findings_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Findings_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Findings Code</description>
        <label>Findings Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>FINDING CODE</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Findings Code)</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </CustomField>