unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Investigation_Completed_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Completed_Date__c</fullName>
        <label>Investigation Completed Date</label>
        <type>Date</type>
    </CustomField>