unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Investigation_Due_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Due_Date__c</fullName>
        <label>Investigation Due Date</label>
        <type>Date</type>
    </CustomField>