unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Overdue__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </CustomField>