unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__RCA__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__RCA__c</fullName>
        <description>RCA</description>
        <label>RCA</label>
        <type>TextArea</type>
    </CustomField>