unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Root_Cause__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Root_Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Root Cause</description>
        <label>Root Cause</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>ROOT CAUSE CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Root Cause)</relationshipLabel>
        <relationshipName>Investigations2</relationshipName>
        <type>Lookup</type>
    </CustomField>