unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Root_Cause_Coding__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Root_Cause_Coding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause Code</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>ROOT CAUSE CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations (Root Cause Code)</relationshipLabel>
        <relationshipName>Investigations1</relationshipName>
        <type>Lookup</type>
    </CustomField>