unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/CMPL123CME__Total_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Total_Weight__c</fullName>
        <label>Total Weight</label>
        <summarizedField>CMPL123CME__Investigation_Items__c.CMPL123CME__Weight__c</summarizedField>
        <summaryForeignKey>CMPL123CME__Investigation_Items__c.CMPL123CME__Investigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>