unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/Inquiry__c.field-meta.xml
<CustomField>
        <fullName>Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inquiry</label>
        <referenceTo>Inquiry__c</referenceTo>
        <relationshipLabel>Investigations/Evaluations</relationshipLabel>
        <relationshipName>Investigations_Evaluations</relationshipName>
        <type>Lookup</type>
    </CustomField>