unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/Investigation_Evaluation_Number__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Evaluation_Number__c</fullName>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Investigation/Evaluation Number</label>
        <type>AutoNumber</type>
    </CustomField>