unpackaged/main/default/objects/CMPL123CME__Investigation__c/fields/RCA__c.field-meta.xml
<CustomField>
        <fullName>RCA__c</fullName>
        <label>RCA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>