unpackaged/main/default/objects/CMPL123CME__Investigation__c/validationRules/prevent_edit_invest_for_closed_inquiry.validationRule-meta.xml
<ValidationRule>
        <fullName>prevent_edit_invest_for_closed_inquiry</fullName>
        <active>true</active>
        <errorConditionFormula>Inquiry__r.CMPL123_WF_Status__c =="Closed - Complaint"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>