unpackaged/main/default/objects/CMPL123CME__Investigation__c/validationRules/Prevent_Edit_Investigation.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_Investigation</fullName>
        <active>true</active>
        <description>Prevent Edit and adding investigation on the Closed Complaint</description>
        <errorConditionFormula>CMPL123CME__Complaint__r.CMPL123CME__CMPL123_WF_Status__c == "Closed - Completed"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>